[package]
name = "statego"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-rt = "2.2"
actix-web = {version = "4", features = ["openssl"]}
bcrypt = "0.15.0"
derive_more = "0.99.17"
dotenv = "0.15"
env_logger = "0.10.0"
log = "0.4.20"
mysql = "24"
openssl = {version = "0.10.57", features = ["v110"]}
serde = "1.0.188"
